@@ -19,7 +19,7 @@
 
 package com.puppycrawl.tools.checkstyle.checks.javadoc;
 
-import java.util.LinkedList;
+import java.util.ArrayList;
 import java.util.List;
 
 /**
@@ -43,10 +43,10 @@ import java.util.List;
  * </p>
  *
  */
-class TagParser {
+public class TagParser {
 
     /** HtmlTags found on the input line of text. */
-    private final List<HtmlTag> tags = new LinkedList<>();
+    private final List<HtmlTag> tags = new ArrayList<>();
 
     /**
      * Constructs a TagParser and finds the first tag if any.
@@ -66,7 +66,7 @@ class TagParser {
      *         left to return.
      */
     public HtmlTag nextTag() {
-        return tags.remove(0);
+        return tags.removeFirst();
     }
 
     /**
