@@ -770,7 +770,6 @@ public final class SiteUtil {
      * @param propertyJavadoc the property Javadoc to extract the since version from.
      * @return the Optional of property version specified in its javadoc.
      */
-    @Nullable
     private static Optional<String> getPropertyVersionFromItsJavadoc(DetailNode propertyJavadoc) {
         final Optional<DetailNode> propertyJavadocTag =
             getPropertySinceJavadocTag(propertyJavadoc);
@@ -872,7 +871,7 @@ public final class SiteUtil {
     }
 
     /**
-     * Returns {@code true} if {@code actualVersion} ≥ {@code requiredVersion}.
+     * Returns {@code true} if {@code actualVersion} >= {@code requiredVersion}.
      * Both versions have any trailing "-SNAPSHOT" stripped before comparison.
      *
      * @param actualVersion   e.g. "8.3" or "8.3-SNAPSHOT"
@@ -1092,23 +1091,16 @@ public final class SiteUtil {
      *
      * @param value the value to get the int stream from.
      * @return the int stream.
-     * @noinspection ChainOfInstanceofChecks
-     * @noinspectionreason ChainOfInstanceofChecks - We will deal with this at
-     *                     <a href="https://github.com/checkstyle/checkstyle/issues/13500">13500</a>
+     * @throws IllegalArgumentException if parameter is null.
      */
     private static IntStream getIntStream(Object value) {
-        final IntStream stream;
-        if (value instanceof Collection<?> collection) {
-            stream = collection.stream()
+        return switch (value) {
+            case null -> throw new IllegalArgumentException("value is null");
+            case Collection<?> collection -> collection.stream()
                     .mapToInt(int.class::cast);
-        }
-        else if (value instanceof BitSet set) {
-            stream = set.stream();
-        }
-        else {
-            stream = Arrays.stream((int[]) value);
-        }
-        return stream;
+            case BitSet set -> set.stream();
+            default -> Arrays.stream((int[]) value);
+        };
     }
 
     /**
@@ -1188,7 +1180,7 @@ public final class SiteUtil {
             result = descriptor.getPropertyType();
         }
         catch (IllegalAccessException | InvocationTargetException | NoSuchMethodException exc) {
-            throw new MacroExecutionException(exc.getMessage(), exc);
+            throw new MacroExecutionException("Failed to retrieve property type", exc);
         }
         return result;
     }
@@ -1330,12 +1322,13 @@ public final class SiteUtil {
     private static String getDescriptionFromJavadocForXdoc(DetailNode javadoc, String moduleName)
             throws MacroExecutionException {
         boolean isInCodeLiteral = false;
+        boolean isInLiteralTag = false;
         boolean isInHtmlElement = false;
         boolean isInHrefAttribute = false;
         final StringBuilder description = new StringBuilder(128);
         final List<DetailNode> descriptionNodes = getFirstJavadocParagraphNodes(javadoc);
-        DetailNode node = descriptionNodes.get(0);
-        final DetailNode endNode = descriptionNodes.get(descriptionNodes.size() - 1);
+        DetailNode node = descriptionNodes.getFirst();
+        final DetailNode endNode = descriptionNodes.getLast();
 
         while (node != null) {
             if (node.getType() == JavadocCommentsTokenTypes.TAG_ATTR_NAME
@@ -1363,13 +1356,12 @@ public final class SiteUtil {
                     description.append(node.getText());
                     isInHtmlElement = false;
                 }
-                if (node.getType() == JavadocCommentsTokenTypes.TEXT
-                        // If a node has children, its text is not part of the description
-                        || isInHtmlElement && node.getFirstChild() == null
-                            // Some HTML elements span multiple lines, so we avoid the asterisk
-                            && node.getType() != JavadocCommentsTokenTypes.LEADING_ASTERISK) {
-                    if (isInCodeLiteral) {
-                        description.append(node.getText().trim());
+                if (isTextContent(node, isInHtmlElement)) {
+                    if (isInCodeLiteral || isInLiteralTag) {
+                        description.append(node.getText().trim()
+                            .replace("&", "&amp;")
+                            .replace("<", "&lt;")
+                            .replace(">", "&gt;"));
                     }
                     else {
                         description.append(node.getText());
@@ -1385,6 +1377,15 @@ public final class SiteUtil {
                         && node.getType() == JavadocCommentsTokenTypes.JAVADOC_INLINE_TAG_END) {
                     isInCodeLiteral = false;
                     description.append("</code>");
+                }
+                if (node.getType() == JavadocCommentsTokenTypes.TAG_NAME
+                        && node.getParent().getType()
+                        == JavadocCommentsTokenTypes.LITERAL_INLINE_TAG) {
+                    isInLiteralTag = true;
+                }
+                if (isInLiteralTag
+                        && node.getType() == JavadocCommentsTokenTypes.JAVADOC_INLINE_TAG_END) {
+                    isInLiteralTag = false;
                 }
 
             }
@@ -1402,6 +1403,19 @@ public final class SiteUtil {
     }
 
     /**
+     * Checks whether the node contains text content that should be written to the description.
+     *
+     * @param node the node to check.
+     * @param isInHtmlElement whether we are inside an HTML element.
+     * @return true if the node contains text content to write.
+     */
+    private static boolean isTextContent(DetailNode node, boolean isInHtmlElement) {
+        return node.getType() == JavadocCommentsTokenTypes.TEXT
+                || isInHtmlElement && node.getFirstChild() == null
+                    && node.getType() != JavadocCommentsTokenTypes.LEADING_ASTERISK;
+    }
+
+    /**
      * Get 1st paragraph from the Javadoc with no additional processing.
      *
      * @param javadoc the Javadoc to extract first paragraph from.
@@ -1414,8 +1428,8 @@ public final class SiteUtil {
             result = "";
         }
         else {
-            final DetailNode startNode = firstParagraphNodes.get(0);
-            final DetailNode endNode = firstParagraphNodes.get(firstParagraphNodes.size() - 1);
+            final DetailNode startNode = firstParagraphNodes.getFirst();
+            final DetailNode endNode = firstParagraphNodes.getLast();
             result = JavadocMetadataScraperUtil.constructSubTreeText(startNode, endNode);
         }
         return result;
