@@ -561,9 +561,7 @@ public class CheckerTest extends AbstractModuleTestSupport {
             assertWithMessage("Error message is not expected")
                 .that(exc.getMessage())
                 .isEqualTo("cannot initialize module com.puppycrawl.tools.checkstyle.TreeWalker"
-                        + " - cannot initialize module " + checkConfig.getName()
-                        + " - Property '$$No such property'"
-                        + " does not exist, please check the documentation");
+                        + " - cannot initialize module " + checkConfig.getName());
         }
     }
 
@@ -581,7 +579,7 @@ public class CheckerTest extends AbstractModuleTestSupport {
         final List<AuditListener> listeners = TestUtil.getInternalStateListAuditListener(checker,
                 "listeners");
         assertWithMessage("Invalid child listener class")
-                .that(listeners.get(listeners.size() - 1) instanceof DebugAuditAdapter)
+                .that(listeners.getLast() instanceof DebugAuditAdapter)
                 .isTrue();
     }
 
