@@ -131,6 +131,7 @@ public class XdocsPagesTest {
             "name=\"RegexpSingleline\"",
             "name=\"RegexpMultiline\"",
             "name=\"JavadocPackage\"",
+            "name=\"LineEnding\"",
             "name=\"NewlineAtEndOfFile\"",
             "name=\"OrderedProperties\"",
             "name=\"UniqueProperties\"",
@@ -241,6 +242,9 @@ public class XdocsPagesTest {
     private static final Set<String> GOOGLE_MODULES = Collections.unmodifiableSet(
         CheckUtil.getConfigGoogleStyleModules());
 
+    private static final Set<String> OPENJDK_MODULES = Collections.unmodifiableSet(
+        CheckUtil.getConfigOpenJdkStyleModules());
+
     private static final Set<String> NON_MODULE_XDOC = Set.of(
         "config_system_properties.xml",
         "sponsoring.xml",
@@ -252,6 +256,7 @@ public class XdocsPagesTest {
         "checks.xml",
         "property_types.xml",
         "google_style.xml",
+        "openjdk_style.xml",
         "sun_style.xml",
         "style_configs.xml",
         "writingfilters.xml",
@@ -263,7 +268,8 @@ public class XdocsPagesTest {
         "writingchecks.xml",
         "config.xml",
         "report_issue.xml",
-        "result_reports.xml"
+        "result_reports.xml",
+        "xpath.xml"
     );
 
     private static final String NAMES_MUST_BE_IN_ALPHABETICAL_ORDER_SITE_PATH =
@@ -678,6 +684,10 @@ public class XdocsPagesTest {
                     sectionName = "Sun";
                     expectedId = (sectionName + "_" + nameString).replace(' ', '_');
                 }
+                else if ("openjdk_style.xml".equals(fileName)) {
+                    sectionName = "OpenJDK";
+                    expectedId = (sectionName + "_" + nameString).replace(' ', '_');
+                }
                 else if ((path.toString().contains("filters")
                         || path.toString().contains("checks"))
                         && !subsectionId.startsWith(sectionName)) {
@@ -798,8 +808,8 @@ public class XdocsPagesTest {
                 }
             }
             catch (CheckstyleException exc) {
-                throw new CheckstyleException(fileName + " has invalid Checkstyle xml ("
-                        + exc.getMessage() + "): " + unserializedSource, exc);
+                throw new CheckstyleException(fileName + " has invalid Checkstyle xml: "
+                        + unserializedSource, exc);
             }
         }
         return true;
@@ -1071,7 +1081,7 @@ public class XdocsPagesTest {
                     .that(columns)
                     .hasSize(5);
 
-                final String propertyName = columns.get(0).getTextContent();
+                final String propertyName = columns.getFirst().getTextContent();
                 tablePropertyNames.add(propertyName);
             });
 
@@ -1157,7 +1167,7 @@ public class XdocsPagesTest {
             if (skip) {
                 assertWithMessage("%s section '%s' should have the specific title", fileName,
                     sectionName)
-                    .that(columns.get(0).getTextContent())
+                    .that(columns.getFirst().getTextContent())
                     .isEqualTo("name");
                 assertWithMessage("%s section '%s' should have the specific title", fileName,
                     sectionName)
@@ -1185,7 +1195,7 @@ public class XdocsPagesTest {
                     .that(didTokens)
                     .isFalse();
 
-            final String propertyName = columns.get(0).getTextContent();
+            final String propertyName = columns.getFirst().getTextContent();
             assertWithMessage("%s section '%s' should not contain the property: %s", fileName,
                 sectionName, propertyName)
                     .that(properties.remove(propertyName))
@@ -1565,17 +1575,13 @@ public class XdocsPagesTest {
      * @return String form of property's default value.
      */
     private static String getIntArrayPropertyValue(Object value) {
-        final IntStream stream;
-        if (value instanceof Collection<?> collection) {
-            stream = collection.stream()
+        final IntStream stream = switch (value) {
+            case null -> throw new IllegalArgumentException("value is null");
+            case Collection<?> collection -> collection.stream()
                     .mapToInt(number -> (int) number);
-        }
-        else if (value instanceof BitSet set) {
-            stream = set.stream();
-        }
-        else {
-            stream = Arrays.stream((int[]) value);
-        }
+            case BitSet set -> set.stream();
+            default -> Arrays.stream((int[]) value);
+        };
         String result = stream
                 .mapToObj(TokenUtil::getTokenName)
                 .sorted()
@@ -1682,8 +1688,8 @@ public class XdocsPagesTest {
         final StringBuilder expectedText = new StringBuilder(120);
 
         for (String s : list) {
-            expectedText.append(s);
-            expectedText.append('\n');
+            expectedText.append(s)
+                    .append('\n');
         }
 
         if (!expectedText.isEmpty()) {
@@ -1739,6 +1745,7 @@ public class XdocsPagesTest {
             .replace("Checkstyle Style", "")
             .replace("Google Style", "")
             .replace("Sun Style", "")
+            .replace("OpenJDK Style", "")
             .replace("Checkstyle's Import Control Config", "")
             .trim();
 
@@ -1750,6 +1757,7 @@ public class XdocsPagesTest {
         boolean hasCheckstyle = false;
         boolean hasGoogle = false;
         boolean hasSun = false;
+        boolean hasOpenjdk = false;
 
         for (Node node : XmlUtil.findChildElementsByTag(subSection, "a")) {
             final String url = node.getAttributes().getNamedItem("href").getTextContent();
@@ -1789,6 +1797,19 @@ public class XdocsPagesTest {
                     .that(SUN_MODULES)
                     .contains(sectionName);
             }
+            else if ("OpenJDK Style".equals(linkText)) {
+                hasOpenjdk = true;
+                expectedUrl = "https://github.com/search?q="
+                        + "path%3Asrc%2Fmain%2Fresources%20path%3A**%2Fopenjdk_checks.xml+"
+                        + "repo%3Acheckstyle%2Fcheckstyle+"
+                        + sectionName;
+                assertWithMessage(
+                    "%s section '%s' should be in openjdk_checks.xml "
+                           + "or not reference 'OpenJDK Style'",
+                    fileName, sectionName)
+                    .that(OPENJDK_MODULES)
+                    .contains(sectionName);
+            }
             else if ("Checkstyle's Import Control Config".equals(linkText)) {
                 expectedUrl = "https://github.com/checkstyle/checkstyle/blob/master/config/"
                     + "import-control.xml";
@@ -1809,6 +1830,11 @@ public class XdocsPagesTest {
         assertWithMessage("%s section '%s' should have a sun section since it is in it's config",
             fileName, sectionName)
                 .that(hasSun || !SUN_MODULES.contains(sectionName))
+                .isTrue();
+        assertWithMessage("%s section '%s' should have an openjdk section since "
+                        + "it is in its config",
+            fileName, sectionName)
+                .that(hasOpenjdk || !OPENJDK_MODULES.contains(sectionName))
                 .isTrue();
     }
 
@@ -1871,6 +1897,7 @@ public class XdocsPagesTest {
 
             final Set<String> styleChecks = switch (styleName) {
                 case "google" -> new HashSet<>(GOOGLE_MODULES);
+                case "openjdk" -> new HashSet<>(OPENJDK_MODULES);
                 case "sun" -> {
                     final Set<String> checks = new HashSet<>(SUN_MODULES);
                     checks.removeAll(IGNORED_SUN_MODULES);
@@ -1905,7 +1932,7 @@ public class XdocsPagesTest {
                         fileName, lastRuleName, lastRuleNumberParts, ruleName);
 
                 if (!"--".equals(ruleName)) {
-                    validateStyleAnchors(XmlUtil.findChildElementsByTag(columns.get(0), "a"),
+                    validateStyleAnchors(XmlUtil.findChildElementsByTag(columns.getFirst(), "a"),
                             fileName, ruleName);
                 }
 
