@@ -20,6 +20,7 @@
 package com.puppycrawl.tools.checkstyle.xpath;
 
 import static com.google.common.truth.Truth.assertWithMessage;
+import static com.puppycrawl.tools.checkstyle.internal.utils.TestUtil.getExpectedThrowable;
 import static com.puppycrawl.tools.checkstyle.utils.XpathUtil.getXpathItems;
 
 import java.io.File;
@@ -288,7 +289,7 @@ public class XpathMapperTest extends AbstractModuleTestSupport {
         assertWithMessage("Invalid number of nodes")
                 .that(objectNodes)
                 .hasSize(1);
-        final AbstractNode objNode = (AbstractNode) objectNodes.get(0);
+        final AbstractNode objNode = (AbstractNode) objectNodes.getFirst();
         final String methodsXpath = "METHOD_DEF";
         final List<NodeInfo> methodsNodes = getXpathItems(methodsXpath, objNode);
         assertWithMessage("Invalid number of nodes")
@@ -321,7 +322,7 @@ public class XpathMapperTest extends AbstractModuleTestSupport {
         assertWithMessage("Invalid number of nodes")
                 .that(nodes)
                 .hasSize(1);
-        final AbstractNode classDefNode = (AbstractNode) nodes.get(0);
+        final AbstractNode classDefNode = (AbstractNode) nodes.getFirst();
         assertWithMessage("Invalid line number")
                 .that(classDefNode.getLineNumber())
                 .isEqualTo(3);
@@ -407,7 +408,7 @@ public class XpathMapperTest extends AbstractModuleTestSupport {
                 TokenTypes.COMPILATION_UNIT)
                 .findFirstToken(TokenTypes.CLASS_DEF);
         final DetailAST[] expected = {expectedClassDefNode};
-        final ElementNode classDefNode = (ElementNode) nodes.get(0);
+        final ElementNode classDefNode = (ElementNode) nodes.getFirst();
         assertWithMessage("Invalid node name")
                 .that(classDefNode.getLocalPart())
                 .isEqualTo("CLASS_DEF");
@@ -530,30 +531,26 @@ public class XpathMapperTest extends AbstractModuleTestSupport {
     public void testQueryRootNotImplementedAxis() throws Exception {
         final String xpath = "//namespace::*";
         final RootNode rootNode = getRootNode("InputXpathMapperAst.java");
-        try {
-            getXpathItems(xpath, rootNode);
-            assertWithMessage("Exception is excepted").fail();
-        }
-        catch (UnsupportedOperationException exc) {
-            assertWithMessage("Invalid exception")
-                    .that(exc.getMessage())
-                    .isEqualTo("Operation is not supported");
-        }
+        final UnsupportedOperationException exc =
+                getExpectedThrowable(UnsupportedOperationException.class, () -> {
+                    getXpathItems(xpath, rootNode);
+                });
+        assertWithMessage("Invalid exception")
+                .that(exc.getMessage())
+                .isEqualTo("Operation is not supported");
     }
 
     @Test
     public void testQueryElementNotImplementedAxis() throws Exception {
         final String xpath = "/COMPILATION_UNIT/CLASS_DEF//namespace::*";
         final RootNode rootNode = getRootNode("InputXpathMapperAst.java");
-        try {
-            getXpathItems(xpath, rootNode);
-            assertWithMessage("Exception is excepted").fail();
-        }
-        catch (UnsupportedOperationException exc) {
-            assertWithMessage("Invalid exception")
-                    .that(exc.getMessage())
-                    .isEqualTo("Operation is not supported");
-        }
+        final UnsupportedOperationException exc =
+                getExpectedThrowable(UnsupportedOperationException.class, () -> {
+                    getXpathItems(xpath, rootNode);
+                });
+        assertWithMessage("Invalid exception")
+                .that(exc.getMessage())
+                .isEqualTo("Operation is not supported");
     }
 
     @Test
@@ -564,7 +561,7 @@ public class XpathMapperTest extends AbstractModuleTestSupport {
         assertWithMessage("Invalid number of nodes")
                 .that(objectNodes)
                 .hasSize(1);
-        final AbstractNode objNode = (AbstractNode) objectNodes.get(0);
+        final AbstractNode objNode = (AbstractNode) objectNodes.getFirst();
         final String methodsXpath = "self::OBJBLOCK";
         final DetailAST[] actual = convertToArray(getXpathItems(methodsXpath, objNode));
         final DetailAST expectedObjBlockNode = getSiblingByType(rootNode.getUnderlyingNode(),
@@ -582,7 +579,7 @@ public class XpathMapperTest extends AbstractModuleTestSupport {
         final String xpath = "//CLASS_DEF[./IDENT[@text='InputXpathMapperAst']]";
         final RootNode rootNode = getRootNode("InputXpathMapperAst.java");
         final List<NodeInfo> nodes = getXpathItems(xpath, rootNode);
-        final ElementNode classDefNode = (ElementNode) nodes.get(0);
+        final ElementNode classDefNode = (ElementNode) nodes.getFirst();
         assertWithMessage("Not existing attribute should have null value")
                 .that(classDefNode.getAttributeValue("", "noneExistingAttribute"))
                 .isNull();
@@ -1157,7 +1154,7 @@ public class XpathMapperTest extends AbstractModuleTestSupport {
         final String xpath = "//LITERAL_CLASS/preceding::*";
         final RootNode rootNode = getRootNode("InputXpathMapperSingleTopClass.java");
         final DetailAST[] actual = convertToArray(getXpathItems(xpath,
-                rootNode.createChildren().get(0)));
+                rootNode.createChildren().getFirst()));
         assertWithMessage("Invalid number of nodes")
                 .that(actual)
                 .hasLength(18);
